--- a/src/css/navigation.css
+++ b/src/css/navigation.css
@@ -1,9 +1,9 @@
-.header {
+.navigation-container {
   padding: 20px 0;
 }
 .nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
 }
 .nav-logo {
   display: inline-flex;
