--- a/src/css/back-link.css
+++ b/src/css/back-link.css
@@ -2,15 +2,14 @@
   position: relative;
   display: inline-block;
   padding: 4px 8px;
-  margin-top: 32px;
   border: 1px solid;
   border-radius: 8px;
 }
 .back-link::before {
   content: '';
   position: absolute;
-  top: 50%;
-  left: 0;
+  top: 25%;
+  left: -25%;
   width: 16px;
   height: 16px;
 
