--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,9 +1,6 @@
 /* Styles for Mobile devices */
 .container {
-  min-width: 320px;
-  max-width: 375px;
-  margin: 0 auto;
-  padding: 0 16px;
+  margin: 32px auto;
 }
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
